<resources>
    <string name="app_name">AnimeDb</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_anime_title">Enter the new Title</string>
    <string name="edit_anime_description">Enter the new Description</string>
    <string name="edit_number_of_episodes">Enter the new Number of Episodes</string>
    <string name="edit_released_year">Enter the new Released Year</string>
    <string name="edit_image">Edit image</string>
    <string name="update">Update</string>
    <string name="enter_anime_title">Enter Anime Title</string>
    <string name="enter_anime_description">Enter Anime Description</string>
    <string name="enter_number_of_episodes">Enter Number of Episodes</string>
    <string name="enter_released_year">Enter Released Year</string>
    <string name="add_image">Add image</string>
    <string name="add_anime">Add Anime</string>
    <string name="released_year">Released Year:</string>
    <string name="_2017">2017</string>
    <string name="number_of_episodes">Number of Episodes:</string>
    <string name="add_new_anime">ADD NEW ANIME</string>
    <string name="edit_anime_pafeTitle">Update Anime</string>
    <string name="Title_validation">Title is required</string>
    <string name="Desc_validation">Description is required</string>
    <string name="Episode_validation">Episode number is required</string>
    <string name="Year_validation">Year of release is required</string>
    <string name="image_validation">Please select an image</string>
    <string name="confirm_delete_all">Confirm Delete</string>
    <string name="message_delete_all">Are you sure you want to delete all animes?</string>
    <string name="deleted_all">All Animes Deleted Successfully</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete">Delete</string>
    <string name="sure_delete">Are you sure you want to delete</string>
    <string name="from_list">from your list?</string>


</resources>